update Isaac Study

--- a/_posts/2024-08-22-Isaac_study_02.md
+++ b/_posts/2024-08-22-Isaac_study_02.md
@@ -24,7 +24,7 @@ pin: false
 ./isaaclab.sh -p source/standalone/demos/quadrupeds.py
 ```
 
-![alt text](image.png)
+![alt text](posts/2024-08-22-Isaac_study_02/image.png)
 
 ### 机械臂（随机关节位置）
 
@@ -32,7 +32,7 @@ pin: false
 ./isaaclab.sh -p source/standalone/demos/arms.py
 ```
 
-![alt text](image-1.png)
+![alt text](posts/2024-08-22-Isaac_study_02/image-1.png)
 
 ### 灵巧手（打开关闭）
 
@@ -40,9 +40,9 @@ pin: false
 ./isaaclab.sh -p source/standalone/demos/hands.py
 ```
 
-![alt text](image-2.png)
+![alt text](posts/2024-08-22-Isaac_study_02/image-2.png)
 
-![alt text](image-3.png)
+![alt text](posts/2024-08-22-Isaac_study_02/image-3.png)
 
 ### 生成不同配置的过程生成地形
 
@@ -50,7 +50,7 @@ pin: false
 ./isaaclab.sh -p source/standalone/demos/procedural_terrain.py
 ```
 
-![alt text](image-4.png)
+![alt text](posts/2024-08-22-Isaac_study_02/image-4.png)
 
 ### 多个弹性体（高处下落）
 
@@ -58,7 +58,7 @@ pin: false
 ./isaaclab.sh -p source/standalone/demos/deformables.py
 ```
 
-![alt text](image-5.png)
+![alt text](posts/2024-08-22-Isaac_study_02/image-5.png)
 
 ### 产生对可视化有用的多个标记
 
@@ -66,7 +66,7 @@ pin: false
 ./isaaclab.sh -p source/standalone/demos/markers.py
 ```
 
-![alt text](image-6.png)
+![alt text](posts/2024-08-22-Isaac_study_02/image-6.png)
 
 ## 创建一个Env
 
